# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "checks-demo"
version = "0.1.0"
description = "Demo of Google Checks AI safety plugin for content moderation"
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Google LLC" }]
dependencies = [
    "genkit",
    "genkit-plugin-checks",
    "genkit-plugin-google-genai",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["watchdog>=3.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
