[project]
name = "evaluators"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "genkit",
  "genkit-plugin-evaluators",
  "genkit-plugin-google-genai",
  "pydantic>=2.10.5",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
