[project]
name = "fastapi-bugbot"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "genkit",
  "genkit-plugin-fastapi",
  "genkit-plugin-google-genai",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
