[project]
name = "fastapi-hello"
version = "0.1.0"
description = "BugBot: AI Code Reviewer with Genkit + FastAPI"
requires-python = ">=3.10"
dependencies = [
    "genkit",
    "genkit-plugin-fastapi",
    "genkit-plugin-google-genai",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = ["watchdog>=6.0.0"]

[tool.uv.sources]
genkit = { workspace = true }
genkit-plugin-fastapi = { workspace = true }
genkit-plugin-google-genai = { workspace = true }
