[project]
name = "flask-hello"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "flask",
  "genkit",
  "genkit-plugin-flask",
  "genkit-plugin-google-genai",
  "pydantic",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
