[project]
name = "framework-middleware-builtin"
version = "0.1.0"
description = "Built-in middleware examples: retry, fallback"
requires-python = ">=3.10"
dependencies = [
  "genkit",
  "genkit-plugin-google-genai",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/main.py"]

[tool.hatch.metadata]
allow-direct-references = true
