[project]
name = "framework-middleware-demo"
version = "0.1.0"
description = "Middleware hooks demo: wrap_generate, wrap_model, wrap_tool + retry"
requires-python = ">=3.10"
dependencies = [
  "genkit",
  "genkit-plugin-google-genai",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/main.py"]

[tool.hatch.metadata]
allow-direct-references = true
