[project]
name = "gemini-context-caching"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "genkit",
  "genkit-plugin-google-genai",
  "httpx",
  "pydantic>=2.10.5",
  "structlog>=25.2.0",
  "uvloop>=0.21.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
